Fix overflow issue in console

--- a/src/app/console/main/main.component.scss
+++ b/src/app/console/main/main.component.scss
@@ -18,3 +18,7 @@
     margin-top: 10px;
     z-index: 10;
 }
+
+d-panel-body {
+    overflow: hidden;
+}
